--- a/src/components/works/WorksPage.module.css
+++ b/src/components/works/WorksPage.module.css
@@ -52,6 +52,7 @@
 @media (max-width: 980px) {
   .header {
     align-items: center;
+    padding: 16px 16px 12px;
     position: sticky;
     width: 100vw;
     gap: 40px;
