--- a/src/components/layout/Sidebar.module.css
+++ b/src/components/layout/Sidebar.module.css
@@ -45,7 +45,7 @@
 @media (max-width: 980px) {
   .sidebar {
     position: relative;
-    height: auto;
+    height: fit-content;
     border-right: none;
     border-bottom: 1px solid var(--color-border);
   }
