--- a/src/components/works/WorksPage.module.css
+++ b/src/components/works/WorksPage.module.css
@@ -9,10 +9,11 @@
 }
 
 .sub {
-  margin: 6px 0 0;
   color: var(--color-main-500);
-  font-size: 13px;
-  line-height: 1.7;
+
+  &:first-child {
+    margin-top: 0;
+  }
 }
 
 .right {
