--- a/src/components/layout/Sidebar.module.css
+++ b/src/components/layout/Sidebar.module.css
@@ -42,12 +42,29 @@
   font-family: var(--mono);
 }
 
+.hamburgerButton {
+  display: none;
+  width: 32px;
+  height: 32px;
+}
+
 @media (max-width: 980px) {
   .sidebar {
+    padding-top: 12px;
     position: relative;
-    height: fit-content;
     border-right: none;
     border-bottom: 1px solid var(--color-border);
+    overflow: clip;
+    height: 55px;
+    transition: 0.3s height;
+
+    &.open {
+      height: var(--height, 55px);
+    }
+  }
+
+  .hamburgerButton {
+    display: block;
   }
 }
 
