--- a/src/components/layout/Sidebar.module.css
+++ b/src/components/layout/Sidebar.module.css
@@ -48,29 +48,45 @@
   height: 32px;
 }
 
-@media (max-width: 980px) {
-  .sidebar {
-    padding-top: 12px;
-    position: relative;
-    border-right: none;
-    border-bottom: 1px solid var(--color-border);
-    overflow: clip;
-    height: 55px;
-    transition: 0.3s height;
-
-    &.open {
-      height: var(--height, 55px);
-    }
-  }
-
-  .hamburgerButton {
-    display: block;
-  }
-}
-
 .content {
   overflow-y: auto;
   display: flex;
   flex-direction: column;
   gap: 18px;
+}
+
+@media (max-width: 980px) {
+  .sidebar {
+    height: var(--sp-header-height);
+    padding-top: 12px;
+    padding-bottom: 22px;
+    position: fixed;
+    top: calc(var(--sp-header-height) * (var(--sp-header-visible) - 1));
+    border-right: none;
+    border-bottom: 1px solid var(--color-border);
+    overflow: clip;
+    transition: 0.3s height, 0.2s top;
+    z-index: 99999;
+
+    &.open {
+      height: calc(var(--height) + 12px);
+      max-height: 100%;
+      overflow: scroll;
+    }
+  }
+
+  .brand {
+    position: sticky;
+    top: 0;
+    width: 100%;
+    background-color: var(--color-main-bg);
+  }
+
+  .hamburgerButton {
+    display: block;
+  }
+
+  .content {
+    overflow: visible;
+  }
 }
